--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "Watson",
   "main": "app.js",
   "scripts": {
-    "test": "hi"
+    "start": "budo . -d --serve bundle.js --live",
+    "build": "browserify . -o bundle.js -g uglifyify",
+    "test": "node test/*.js | tap-spec",
+    "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
+    "push": "gh-pages -d dist",
+    "deploy": "npm run build && npm run dist && npm run push"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   },
   "repository": {
     "type": "git",
@@ -17,11 +27,26 @@
   },
   "homepage": "https://github.com/marcus-crane/watson#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "budo": "^8.2.0",
     "cheerio": "^0.20.0",
     "express": "^4.14.0",
+    "highland": "^2.9.0",
+    "promise": "^7.1.1",
     "react": "^15.2.0",
+    "react-dom": "^15.2.0",
     "superagent": "^2.0.0",
+    "superagent-promise": "^1.1.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "uglifyify": "^3.0.1",
+    "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "dogs": "^6.4",
+    "push": "^3.2"
   }
 }
