--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "highland": "^2.9.0",
     "promise": "^7.1.1",
     "react": "^15.2.0",
+    "rdgdrugd": "^666",
     "react-dom": "^15.2.0",
     "superagent": "^2.0.0",
     "superagent-promise": "^1.1.0",
