--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "node test/*.js | tap-spec",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
-    "deploy": "npm run build && npm run dist && npm run push"
+    "deploy": "npm run build && npm run dist && npm run push",
+    "search": "node lib/moduleInfo.js"
   },
   "browserify": {
     "transform": [
