--- a/package.json
+++ b/package.json
@@ -4,17 +4,7 @@
   "description": "Watson",
   "main": "app.js",
   "scripts": {
-    "start": "budo . -d --serve bundle.js --live",
-    "build": "browserify . -o bundle.js -g uglifyify",
-    "test": "node test/*.js | tap-spec",
-    "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
-    "push": "gh-pages -d dist",
-    "deploy": "npm run build && npm run dist && npm run push"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -22,9 +12,6 @@
   },
   "author": "Marcus <marcus@thingsima.de>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/marcus-crane/watson/issues"
-  },
   "homepage": "https://github.com/marcus-crane/watson#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
@@ -47,6 +34,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "dogs": "^6.4",
     "push": "^3.2"
   }
