--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
-    "colors": "^1.1.2",
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0",
     "promise": "^7.1.1",
     "superagent": "^2.0.0",
     "superagent-promise": "^1.1.0"
