--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pkgparse",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A simple module for searching packages by name or importing a package.json",
-  "main": "app.js",
+  "main": "pkgparse.js",
   "scripts": {
     "start": "node pkgparse"
   },
