--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "opn": "^4.0.2",
     "promise": "^7.1.1",
     "superagent": "^2.0.0",
     "superagent-promise": "^1.1.0"
