Updated version to 1.2.1 which includes updated docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pkgparse",
-  "version": "1.4.0-0",
+  "version": "1.2.1",
   "description": "A simple module for searching packages by name or importing a package.json",
   "main": "pkgparse.js",
   "scripts": {
