--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "commander": "^2.9.0",
     "opn": "^4.0.2",
     "promise": "^7.1.1",
-    "superagent": "^2.0.0",
-    "superagent-promise": "^1.1.0"
+    "superagent": "^2.0.0"
   },
-  "devDependencies": {
-    "tape": "^4.6.0"
-  },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
   },
