--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
+    "caporal": "^0.3.0",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "opn": "^4.0.2",
