--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pkgparse",
-  "version": "1.2.4",
-  "description": "A simple module for searching packages by name or importing a package.json",
+  "version": "1.9.5",
+  "description": "A module for searching details about other modules",
   "main": "pkgparse.js",
   "scripts": {
     "start": "node pkgparse"
@@ -17,14 +17,14 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "caporal": "^0.3.0",
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "opn": "^4.0.2",
-    "promise": "^7.1.1",
-    "superagent": "^2.0.0"
+    "chalk": "^1.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  },
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
   },
