--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "caporal": "^0.3.0",
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "opn": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
