--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "chalk": "^1.1.3",
     "opn": "^4.0.2"
   },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0"
-  },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
   },
