--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.15.3",
     "caporal": "^0.3.0",
     "chalk": "^1.1.3",
+    "eslint": "^3.19.0",
     "opn": "^4.0.2"
   },
   "bugs": {
