Found out how to allow async through eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
         "commonjs": true,
         "es6": true
     },
+    "parserOptions": {
+        "ecmaVersion": "8"
+    },
     "extends": "eslint:recommended",
     "rules": {
         "indent": [
