--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "axios": "^0.15.3",
     "caporal": "^0.3.0",
     "chalk": "^1.1.3",
-    "eslint": "^3.19.0",
     "opn": "^4.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0"
   },
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
