Changed lint command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "pkgparse.js",
   "scripts": {
     "start": "node pkgparse",
-    "lint": "eslint .",
+    "lint": "standard .",
     "test": "npm run lint"
   },
   "bin": {
