Removed package lock and added preferGlobal + testing modules

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.1",
   "description": "A module for searching details about other modules",
   "main": "pkgparse.js",
+  "preferGlobal": true,
   "engines": {
     "node": ">= 7.7.4"
   },
@@ -28,7 +29,10 @@
     "opn": "^4.0.2"
   },
   "devDependencies": {
-    "standard": "^10.0.2"
+    "chai": "^4.0.1",
+    "mocha": "^3.4.2",
+    "standard": "^10.0.2",
+    "test-console": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
