Helps if I add the tests to the package itself

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node pkgparse",
     "lint": "standard .",
-    "test": "npm run lint"
+    "test": "npm run lint && mocha"
   },
   "bin": {
     "pkgparse": "pkgparse.js"
