--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
-    "axios": "^0.15.3",
-    "caporal": "^0.3.0",
-    "chalk": "^1.1.3",
-    "opn": "^4.0.2"
+    "axios": "^0.15.3"
   },
   "devDependencies": {
-    "chai": "^4.0.1",
     "mocha": "^3.4.2",
-    "standard": "^10.0.2",
-    "test-console": "^1.0.0"
+    "standard": "^10.0.2"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it"
+    ]
   },
   "bugs": {
     "url": "https://github.com/marcus-crane/pkgparse/issues"
