--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
-    "axios": "^0.15.3"
+    "caporal": "^0.6.0"
   },
   "devDependencies": {
     "mocha": "^3.4.2",
