--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "homepage": "https://github.com/marcus-crane/pkgparse#readme",
   "dependencies": {
-    "caporal": "^0.6.0"
+    "caporal": "^0.6.0",
+    "chalk": "^1.1.3"
   },
   "devDependencies": {
     "mocha": "^3.4.2",
